--- a/CSS/style.css
+++ b/CSS/style.css
@@ -193,11 +193,14 @@
 }
 
 .footer h4 {
+  display: flex;
+  align-items: center;
   color: black;
   font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-size: 19px;
   font-weight: 100;
   width: 100%;
+  height: 100%;
 }
 
 .footer a {
@@ -208,9 +211,19 @@
   text-decoration: underline;
 }
 
-.push img {
+.social {
+  display: flex;
+  justify-content: flex-end;
+  height: 100%;
+  width: 100%;
+  background-color: #F0CCCB;
+  margin: 20px 150px 0 0;
+}
+
+.social img {
   height: 50px;
   width: auto;
+  padding: 10px;
 }
 
 #top {
@@ -225,10 +238,15 @@
   background-color: white;
   color: #414042;
   padding: 15px;
-  border-radius: 4px;
+  border-radius: 5px;
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
+  font-family: 'Roboto', sans-serif;
 }
 
 #top:hover {
-  background-color: #555;
+  background-color: #404142;
+}
+
+#top:hover h4 {
   color: white;
 }
